@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-04-27 mmichaud <michael.michaud@free.fr>
+  * Improved/homogenized result layer naming in query tools :
+    source layer_[attribute_]operator_[parameter_]value
+  * Fixed some missing values in language files
+
 2012-04-22 Matthias Scholz <ms@jammerhund.de>
   * AboutDialog:
     * removed the output of the Stacktrace, if the "readme.txt" was not found.
